--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,8 +1,14 @@
 name: Build
 
 on:
-  push:
   pull_request:
+    paths-ignore:
+      - "**.md"
+  push:
+    branches:
+      - master
+    paths-ignore:
+      - "**.md"
   schedule:
     # runs the CI everyday at 10AM
     - cron: "0 10 * * *"
@@ -14,12 +20,12 @@ jobs:
     strategy:
       matrix:
         channel:
-          - master
+          - stable
 
     steps:
       - uses: actions/checkout@v2
 
-      - uses: subosito/flutter-action@v1
+      - uses: subosito/flutter-action@v2
         with:
           channel: ${{ matrix.channel }}
 
@@ -38,7 +44,10 @@ jobs:
         run: flutter format --set-exit-if-changed .
 
       - name: Analyze
-        run: melos exec -- "flutter analyze"
+        run: flutter analyze
 
       - name: Run tests
-        run: melos exec --scope="functional_widget" -- "dart test"
+        run: melos run test
+
+      - name: Upload coverage to codecov
+        run: curl -s https://codecov.io/bash | bash
