--- a/packages/functional_widget/pubspec.yaml
+++ b/packages/functional_widget/pubspec.yaml
@@ -7,7 +7,7 @@ environment:
   sdk: ">=2.12.0 <3.0.0"
 
 dependencies:
-  analyzer: ^5.2.0
+  analyzer: ">=5.2.0 <7.0.0"
   build: ^2.0.0
   build_config: ^1.0.0
   meta: ^1.2.0
