--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,7 +14,7 @@ jobs:
     strategy:
       matrix:
         channel:
-          - master
+          - stable
 
     steps:
       - uses: actions/checkout@v4
